--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta http-equiv="Permissions-Policy" content="identity-credentials-get=*">
   
   <!-- Content Security Policy SIN frame-ancestors (solo para server headers) -->
-  <meta http-equiv="Content-Security-Policy" content="
+  <!-- <meta http-equiv="Content-Security-Policy" content="
     default-src 'self';
     script-src 'self' 'unsafe-inline' 'unsafe-eval' https://accounts.google.com/gsi/client;
     style-src 'self' 'unsafe-inline' https://accounts.google.com;
@@ -16,7 +16,7 @@
     font-src 'self' data: https:;
     connect-src 'self' https://accounts.google.com;
     frame-src 'self' https://accounts.google.com;
-  ">
+  "> -->
     <title>Comersia</title>
     <!-- Preload crítico para Google -->
   <link rel="preconnect" href="https://accounts.google.com">
